shuffle race control buttons to get out of the way of the title on mobile (fixes #578)

--- a/cmd/server-manager/typescript/sass/_race-control.scss
+++ b/cmd/server-manager/typescript/sass/_race-control.scss
@@ -226,3 +226,10 @@ td .dot-inactive {
 .live-events {
   width: 220px;
 }
+
+@media screen and (min-width: 550px) {
+  .race-control-buttons {
+    position: relative;
+    top: -50px;
+  }
+}
